# ae-zoom-plugin

./: '  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE.txt  README.md  Zoom.rsrc  ae-zoom.r  ae-zoom.sln  llvm-mingw-w64-x86_64.cmake  mingw-w64-x86_64.cmake  msvcToolchain.cmake  toolchain-macos-x86_64.cmake  toolchain-macos.cmake
ae-zoom/: BasicExternalObject.cpp  BasicExternalObject.h  ae-zoom.cpp  ae-zoom.vcxproj  ae-zoom.vcxproj.filters
include/: ae-egg.h  ae-zoom.h  ae.h  experimental.h  logger.h
sh/: check-if-wsl.sh  find-msvc-compiler.bat  symlink-macos-frameworks.sh
src/: CMakeLists.txt  Strings.cpp  ae-egg.cpp  ae-egg.h  ae-zoom.cpp  ae-zoom.h  experimental.cpp  external-symbols.cpp  external-symbols.h  mangled-names.cpp  mangled-names.h  options.h  osx.h  osx.mm  util-functions.h  view-pano.cpp  view-pano.h  zoom-actions.cpp  zoom-actions.h
src/JS/: JS.cpp  JS.h  init-js-bridge.js  pass-key-bind.js  save-cmd-ids.js  zoom-increment.js  zoom-script.js  zoom-set-to.js
src/experimental-options/: experimental-options.cpp  experimental-options.h
src/iohook/: CMakeLists.txt  iohook.h  logger.cpp  logger.h
src/iohook/darwin/: dispatch-event.h  dispatch-event.mm  input-helper.h  input-helper.mm  iohook.mm
src/iohook/windows/: dispatch-event.cpp  dispatch-event.h  input-helper.cpp  input-helper.h  iohook.cpp
src/mangled-names/: mangled-names-mac.cpp  mangled-names-win.cpp  mangled-names.cpp  mangled-names.h
src/options/: options.cpp  options.h
src/uiohook/: CMakeLists.txt
src/uiohook/src/windows/: input_hook.c
